
2022-03-11  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* common.c, common.h: add support for the STOP ERROR statement

2022-05-30  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (num_byte_memcpy): removed, callers adjusted to
	  use memcpy instead

2022-05-24  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (cob_inspect_converting): fix possible stackoverflow
	* call.c (cob_resolve_internal): fix possible stack-use-after-scope,
	  happening if name conversion is active, introduced on 2020-11-29
	  and distributed with 3.1.2

2022-05-23  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (inspect_common_no_replace, inspect_common_replacing):
	  split from inspect_common to enable further optimization for
	  non replacing variant
	* strings.c (inspect_common_no_replace): for LEADING and TRAILING - do
	  not mark each occurrence, instead gather range, then set the marker
	  afterwards to reduce the number of expensive small memsets
	  (TALLYING for 20000 TRAILING spaces -> 1 memset instead of 20000)

2022-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sign_ascii, cob_put_sign_ascii, cob_put_sign_ebcdic):
	  skip sign-adjustment if data is already without/with sign
	* common.c (cob_put_sign_ebcdic): invalid data for negative sign is now
	  converted to -0 instead of +0
	* strings.c (cob_inspect_init_common): extracted from cob_inspect_init
	* strings.c (cob_inspect_converting): reordered code, so inspect_mark
	  is no longer needed
	* strings.c (cob_inspect_init_common): extracted from cob_inspect_init
	* strings.c (cob_inspect_init_converting), common.h: new stripped down
	  variant of cob_inspect_init
	* strings.c (cob_inspect_converting): changed conversion to be based
	  on pre-computed conversion tables, improving performance a lot

2022-04-11  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (inspect_find_data): extracted from cob_inspect_before /
	  cob_inspect_after